--- a/src/App.scss
+++ b/src/App.scss
@@ -182,6 +182,9 @@ body {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  @media (max-width:768px) {
+    flex-direction: column;
+  }
 }
 
 .allDayWeather-hour {
@@ -192,4 +195,9 @@ body {
   color: white;
   margin: 10px 10px 10px 0px;
   padding: 15px;
+}
+
+.dailyWeather {
+  text-align: left;
+  margin: 20px 0;
 }
